<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"

    android:orientation="vertical"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/daylabel"
            style="@style/Theme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <Spinner
            android:id="@+id/day_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateLabel"
            style="@style/Theme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/fitDate"
            style="@style/Theme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dayGo"
            style="@style/Theme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Are You Goes To gym to day:"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/yes_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.Label"
                android:text="@string/yes_radio_text"
                />
            <RadioButton android:id="@+id/no_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.Label"
                android:text="@string/No_radio_text"
                />
        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PlayedLabekl"
            style="@style/Theme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What You Played Today " />

        <Spinner
            android:id="@+id/WhatPlayed_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descLabel"
            style="@style/Theme.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description_label" />

        <EditText
            style="@style/Theme.EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="180dp" />
    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_text"/>

</LinearLayout>