<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".ActivityDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/ / /"
            style="@style/Theme.Details.title"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView

            style="@style/Theme.Details.textViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"


            />

        <TextView
            android:id="@+id/dateTextView"
            style="@style/Theme.Details.answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="/ / /" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/Theme.Details.textViews"


            />
        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/ / /"

            style="@style/Theme.Details.answers"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goes_to_gym"
            style="@style/Theme.Details.textViews"

            />
        <TextView
            android:id="@+id/yesNoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/ / /"
            style="@style/Theme.Details.answers"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_you_played"
            style="@style/Theme.Details.textViews"

            />
        <TextView
            android:id="@+id/whatplayedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/ / /"
            style="@style/Theme.Details.answers"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/dTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_description"
            style="@style/Theme.Details.textViews"

            />
        <TextView
            android:id="@+id/desc_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/ / /"
            style="@style/Theme.Details.answers"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="backToMain"/>

    </LinearLayout>


</LinearLayout>